kustomize/sd3-ch/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd3-ch-api
  labels:
    app: sd3-ch-api
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: sd3-ch-api
