kustomize/sd3-ch/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd3-ch-api-ingress
  labels:
    app: sd3-ch-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: status-ch.otc-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sd3-ch-api
            port:
              number: 8000
